# popexposure

./: .gitignore  README.md  docs-requirements.txt  mkdocs.yml  new_helpers_may_14.py  new_helpers_may_17.py  pop_exp.yml  pyproject.toml  reinstall.sh  requirements.txt  test_helpers.ipynb
.github/workflows/: docs.yml
benchmarking/: README.md  benchmark.py  use_cases.py
demo/demo_code/: 00_download_data.sh  01_data_setup_example.ipynb  01_demo_data_setup.ipynb  02_demo_example_run.ipynb  02_example_run.ipynb  03_demo_explore_results.ipynb  popexposure_demo.ipynb
docs/: citation.md  index.md  installation.md  quickstart.md
docs/api/: overview.md
docs/stylesheets/: extra.css
docs/tutorials/: 00_download_data.sh  01_demo_data_setup.ipynb  01_purpose_and_data_setup.ipynb  02_demo_example_run.ipynb  03_demo_explore_results.ipynb
popexposure/: pop_estimator.py
popexposure/utils/: geom_ops.py  geom_validator.py  mask_raster_partial_pixel.py
site/: 404.html  index.html  objects.inv
site/citation/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/search/: search_index.json
src/Pop_Exp/: find_exposure.py
src/pop_exp/: pop_ex_helpers.py
src/popexposure/: __init__.py  data_loader.py  estimate_exposure.py  find_exposure.py  geometry_operations.py  geometry_validator.py  raster_extraction.py
tests/: test_intersection.ipynb
tests/test_data/: test_admin_units_grid.geojson  test_admin_units_grid.parquet
tests/unit_tests/: test_data_loader.py  test_estimate_exposure.py  test_geometry_operations_visual.py  test_pop_estimator.py  (+5 more)
(+14 files in other folders)
