[tool.poetry]
name = "popexposure"
version = "1.0.0.dev13"
description = "A package for finding the number of people residing near environmental hazards"
authors = [
    "heathermcb <heathermcbrien2.0@gmail.com>",
    "joanacasey <jcasey@uw.edu>",
    "nina-flores <nf2497@cumc.columbia.edu>",
    "lawrence-chillrud <chili@u.northwestern.edu>",
    "laurenwilner <wilnerl@uw.edu>"
]
readme = "README.md"
license = "MIT"
keywords = ["population", "exposure", "wildfires", "environmental hazards", "climate hazards", "find people exposed"]
homepage = "https://github.com/heathermcb/popexposure"
repository = "https://github.com/heathermcb/popexposure"
documentation = "https://github.com/heathermcb/popexposure#readme"
packages = [{ include = "popexposure" }]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "*"
geopandas = "1.0.1"
pathlib = "*"
typing = "*"
shapely = "*"
rasterio = "*"
exactextract = "*"
pyproj = "*"
pyarrow = "*"
fastparquet = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"